kafka-mongo-sink-connector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-mongo-sink-svc
spec:
  ports:
    - name: rest
      port: 8083
      targetPort: 8083
    - name: metrics
      port: 9100
      targetPort: 9100
